# squigly-trace

./: LICENSE  README.md  build.bat  build.sh  raytrace.cabal  squigly-trace.cabal  stack.yaml
.stack-work/install/65995373/flag-cache/: HTTP-4000.3.5-Is2Xb6lrvUD1exRU9GvAeT  JuicyPixels-3.2.8.1-4AbHYLGcEbLBNOsmMKGed  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  adjunctions-4.3-5CqTSM7liCdC9cb4N2IolK  async-2.1.1-4n6HEMPJR2eJK0JpvCfuPK  base-orphans-0.5.4-ABoxiBf7nXc7Qqh66CgYc9  base16-bytestring-0.1.1.6-4E2p94lTx8gIceMhu8Kl9o  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  bifunctors-5.4.1-B27lbd71hBJ2VXEJmV4sQN  bmp-1.2.6.3-43OLkH0uuwm831pBFpx2PZ  bytes-0.15.2-CoxH8CioAOK8h6CcNcuhd  cabal-doctest-1-3OH6xMXYfakDTTZ99VQuTb  cabal-install-1.24.0.2  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  comonad-5-ETWy8l913C0Kq2HEAZg6Cb  contravariant-1.4-ETyVlWBlFwj93UDOdH22No  cryptohash-sha256-0.11.100.1-4jVo7W1Cec2JgABhLoMmkP  distributive-0.5.2-JCgfTXNR3ywAyV7fFWIBI5  ed25519-0.0.5.0-DOxHK22XPn0HrMBTHVASla  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  free-4.12.4-Ab5EFvlPq2CHsY4aRoQQaZ  hackage-security-0.5.2.2-KaAZVXiBc3R5t17m388KKo  hashable-1.2.5.0-F4MWeNuv2sjJRqBd2T5ul4  integer-logarithms-1.0.1-IEHCuEd5sG4JjSjlx7m5JF  kan-extensions-5.0.1-11Ov83x9jJMC3tpuqa2lhG  lens-4.15.1-JIqePnD6ntW5ZEF4vrpOVi  linear-1.20.5-CEAsJizrl7jL0iAxtpGqYP  loop-0.3.0-4tGn4RSY02pFTwJ5L4CYRr  matrix-0.3.5.0-eFZR6K8Lax4OrNeuTQF4y  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  network-2.6.3.1-AwRxOQvT8JM9e8zDFK7aCI  network-uri-2.6.1.0-EwGrJ9bdUqR1E7dAIJ4cwF  parallel-3.2.1.0-CNlrARikHUx7Z7NHwpxRS3  parsec-3.1.11-113irVHGgd88sRnywByDNw  prelude-extras-0.4.0.3-BhL9U5k7NtGJn1itwIHt2Y  (+19 more)
app/: Main.hs  squigly-trace-exe.hp
data/: bih  camera  pink-test4-lp.mtl  scene.sq  test2.mtl  test3.mtl  test4-lowpoly.mtl
src/: BIH.hs  BVH.hs  Color.hs  Geometry.hs  Geometry2.hs  KdTree.hs  Lib.hs  Obj.hs  V3.hs
(+10 files in other folders)
